--- a/pages/index.html
+++ b/pages/index.html
@@ -18,9 +18,9 @@
       <p>Please enter your name, email and select game type.</p>
 
       <form id="newGameForm">
-        <input name="username" type="text" placeholder="Username" required minlength=4 />
+        <input name="username" type="text" placeholder="Username" required minlength=4 value="1234"/>
         <span class="input-icon"><i class="fa-solid fa-user"></i></span><br />
-        <input name="email" type="email" placeholder="Email" required />
+        <input name="email" type="email" placeholder="Email" required value="123@123.com"/>
         <span class="input-icon"><i class="fa-solid fa-envelope"></i></span><br />
         <div class="flex-row">
           <p>Please select type of game:</p>
@@ -54,6 +54,15 @@
       </table>
     </div>
   </div>
+
+
+  <!-- HTML Template -->
+  <template id="image-template">
+    <div class="image">
+      <img src="../images/Image_back.png" alt="Memory card">
+      <p class="description">Do I need description here?</p>
+    </div>
+  </template>
 </body>
 
 </html>
