Start game continue

--- a/pages/index.html
+++ b/pages/index.html
@@ -48,12 +48,21 @@
   <div class="game-field">
     <div>
       <h2>Game field</h2>
-      <p>Here will be game text.</p>
+      <p id="gameSuggestions">Here will be game text.</p>
       <table id="game-table">
 
       </table>
     </div>
   </div>
+
+    <!-- HTML Template -->
+    <template id="image-template">
+      <div class="image-card">
+        <img src="../images/image_back.png" alt="Memory card">
+        <!-- <p class="description">Do I need description here?</p> -->
+      </div>
+    </template>
+
 </body>
 
 </html>
