Remove the debuging stuff

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
       <p>Please enter your name, email and select game type.</p>
 
       <form id="newGameForm">
-        <input name="username" type="text" placeholder="Username" required minlength=4 value="1234"/>
+        <input name="username" type="text" placeholder="Username" required minlength=4/>
         <span class="input-icon"><i class="fa-solid fa-user"></i></span><br />
-        <input name="email" type="email" placeholder="Email" required value="123@123.com"/>
+        <input name="email" type="email" placeholder="Email" required/>
         <span class="input-icon"><i class="fa-solid fa-envelope"></i></span><br />
         <div class="flex-row">
           <p>Please select type of game:</p>
