Minor bug fixes

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <template id="image-template">
       <div class="image-card">
         <img src="../images/image_back.png" alt="Memory card">
-        <!-- <p class="description">Do I need description here?</p> -->
+        <p class="description">Do I need description here?</p>
       </div>
     </template>
 
