Minor bug fixes

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <p>Please enter your name, email and select game type.</p>
 
       <form id="newGameForm">
-        <input name="username" type="text" placeholder="Username" required minlength=4/>
+        <input name="username" type="text" placeholder="Username" required minlength=4 maxlength="50"/>
         <span class="input-icon"><i class="fa-solid fa-user"></i></span><br />
         <input name="email" type="email" placeholder="Email" required/>
         <span class="input-icon"><i class="fa-solid fa-envelope"></i></span><br />
